# sagemaker-studio-custom-image-samples

./: .gitignore  DEVELOPMENT.md  README.md
.ipynb_checkpoints/: README-checkpoint.md
examples/beakerx-image/: Dockerfile  README.md  app-image-config-input.json  create-domain-input.json  update-domain-input.json
examples/conda-efs-image/: Dockerfile  README.md  app-image-config-input.json  create-domain-input.json  update-domain-input.json
examples/conda-env-kernel-image/: Dockerfile  README.md  app-image-config-input.json  create-domain-input.json  environment.yml  update-domain-input.json
examples/echo-kernel-image/: Dockerfile  README.md  app-image-config-input.json  create-domain-input.json  update-domain-input.json
examples/javascript-tf-image/: Dockerfile  README.md  app-image-config-input.json
examples/jupyter-docker-stacks-julia-image/: Dockerfile  README.md  app-image-config-input.json  create-domain-input.json  update-domain-input.json
examples/pip-venv-kernel-image/: Dockerfile  README.md  app-image-config-input.json  create-domain-input.json  requirements.txt  update-domain-input.json
examples/python-poetry-image/: Dockerfile  README.md  app-image-config-input.json  create-domain-input.json  pyproject.toml  update-domain-input.json
examples/r-image/: Dockerfile  README.md  app-image-config-input.json  create-domain-input.json  update-domain-input.json
examples/rapids-image/: Dockerfile  README.md  app-image-config-input.json
examples/scala-image/: Dockerfile  README.md  app-image-config-input.json  create-domain-input.json  (+1 more)
(+24 files in other folders)
