[tool.poetry]
name = "custom_poetry_image"
version = "0.1.0"
description = "An example of a custom Poetry image for SageMaker Studio."
authors = ["Your Name <your-email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
boto3 = "^1.17.51"
ipykernel = "^5.5.3"
numpy = "^1.20.2"
pandas = "^1.2.4"
sagemaker = "^2.39.0"
scikit-learn = "^0.24.1"
scipy = "^1.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.1.6"]
build-backend = "poetry.core.masonry.api"